# python-cli-pypa-build-example

./: README.md  myexecutable  pyproject.toml  setup.cfg
mypackage/: mymodule.py
