[project]
author = "my name"
name = "mypackagefromtoml"
url = "https://my-arb-url"
version = "0.0.11"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.scripts]
another-application = "mypackage.mymodule:another_function"
my-application = "mypackage.mymodule:my_function"
